# sell-bot

./: .env.example  .gitignore  README.md  migration_add_price_levels.sql  pyproject.toml  requirements.txt  КомерцСклад 17-04-26.xls  Прайс Нопосон_до додатку_1_2.xlsx  ЯН контракти Дистрибютори 2026.xls
src/order_bot/: bootstrap.py  config.py  import_from_files.py
src/order_bot/bot/: anti_spam.py  formatters.py  handlers.py  keyboards.py  main.py  review_state.py
src/order_bot/cli/: upload_price.py  upload_warehouses.py
src/order_bot/db/: __init__.py  connection.py  migrations.py  query_builder.py  schema.sql
src/order_bot/ingest/: __init__.py  viber_server.py
src/order_bot/llm/: __init__.py  client.py  order_parser.py
src/order_bot/mail_ingest/: __init__.py  imap_reader.py  poller.py
src/order_bot/parsers/: __init__.py  direct_parsers.py  llm_file_parser.py  models.py  price_list_parser.py
src/order_bot/repositories/: __init__.py  base.py  client.py  order.py  price.py  stock.py  warehouse.py
src/order_bot/services/: __init__.py  client_contract_service.py  matching_service.py  order_service.py  price_service.py  stock_service.py  warehouse_service.py  warehouse_stock_service.py
tests/: fake_llm.py  test_direct_parsers.py  test_file_parser_docx.py  test_order_intent_classification.py  test_order_parser_fallback.py  test_order_review_flow.py  test_price_stock_upload.py  test_warehouse_parser.py
